--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css",
+  "name": "@nonphoto/css",
   "version": "1.0.0",
   "description": "CSS reset and utilities",
   "main": "reset.css",
